--- a/index.html
+++ b/index.html
@@ -1,17 +1,231 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>
+    <title>Philip Matunda</title>
 
-    </title>
-    <meta name="author" content="">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/tachyons.css">
+    <!-- Meta -->
+
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Avid programmer passionate about code, design, startups and technology."
+    />
+
+    <!-- Favicon -->
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png"
+    />
+    <link rel="manifest" href="./site.webmanifest" />
+    <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#04143A" />
+    <meta name="msapplication-TileColor" content="#04143A" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@600&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- Social meta -->
+
+    <meta name="twitter:card" value="summary_large_image" />
+    <meta name="twitter:site" value="@philipmatunda" />
+    <meta name="twitter:creator" value="@philipmatunda" />
+    <meta
+      property="og:image"
+      content="https://www.philipmatunda.com/img/og-image.jpg"
+    />
+    <meta property="og:image:width" content="1035" />
+    <meta property="og:image:height" content="542" />
+    <meta property="og:title" content="Philip Matunda" />
+    <meta
+      property="og:description"
+      content="I make apps, websites, backends, open-source projects, and startups (rarely). I like to deploy everything myself with Docker. I sometimes do design in Sketch. I don’t have a favourite programming language."
+    />
+    <meta property="og:url" content="https://www.philipmatunda.com/" />
+    <meta property="og:type" content="profile" />
+    <meta property="profile:first_name" content="Philip" />
+    <meta property="profile:last_name" content="Matunda" />
+    <meta property="profile:username" content="philipmatunda" />
+    <meta property="profile:gender" content="male" />
+
+    <!-- Custom stylesheet -->
+
+    <style>
+      /* TACHYONS */
+
+      /*! TACHYONS v4.11.1 | http://tachyons.io */ /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
+     
+    </style>
   </head>
   <body>
+    <!-- Logo + Links-->
 
+    <nav
+      class="flex items-center bb b--light-gray justify-between ph3 mw8 ml-auto mr-auto"
+    >
+      <a class="link overflow-hidden relative" href="index.html" title="Home">
+        <h5 class="f5 f4-m f3-l fw1 black-90 mv1">P M</h5>
+      </a>
+      <ul class="pa0">
+        <li class="dib ml2">
+          <a class="light-slate-gray" href="/projects.html" target="">Projects</a>
+        </li>
+        <li class="dib ml2">
+          <a class="light-slate-gray" href="https://medium.com/@matundaphyl" target="_blank">Blog</a>
+        </li>
+        <li class="dib ml2">
+          <a class="light-slate-gray" target="_blank" href="https://www.goodreads.com/user/show/142525237-philip-matunda" target="_blank">Books</a>
+        </li>
+        <li class="dib ml2">
+          <a class="light-slate-gray" target="_blank" href="https://docs.google.com/document/d/1cWOxh4vFS_Ok2dYimXS58aK5o-jYiPGOMYX-1jl65-w/edit?usp=sharing" target="">CV</a>
+        </li>
+        <li class="dib ml2">
+          <a class="light-slate-gray" href="/contact.html" target="">Contact</a>
+        </li>
+      </ul>
+    </nav>
+
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+
+    <section class="profile-section tc mt5 ph3 mw7 ml-auto mr-auto">
+      <img src="/img/Phil.png" width="170" height="170" alt="Philip Matunda" />
+      <h1 class="custom-heading">Philip MATUNDA</h1>
+      <ul class="custom-list">
+        <li>#engineer</li>
+        <li>#mentor</li>
+        <li>#entrepreneur</li>
+      </ul>
+      <p class="light-slate-gray">
+        Entrepreneur & Software Engineer passionate about Digital Health.
+        <br />
+        Founder & Engineer at
+        <a href="https://pona.co.ke" target="_blank">Pona</a>.
+      </p>
+    </section>
+    <!-- Social Links -->
+
+    <section class="social-links">
+      <a href="https://github.com/moturiphil" target="_blank">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 512 512"
+          height="16px"
+        >
+          <path
+            d="M256,32C114.61,32,0,146.58,0,288.23c0,113.33,73.45,209.35,175.34,243.25c12.82,2.35,17.5-5.56,17.5-12.33
+            c0-6.1-0.24-22.28-0.38-43.74c-71.34,15.59-86.42-30.15-86.42-30.15c-11.66-29.67-28.48-37.57-28.48-37.57
+            c-23.28-15.91,1.76-15.59,1.76-15.59c25.72,1.81,39.28,26.41,39.28,26.41c22.87,39.17,59.99,27.86,74.64,21.3
+            c2.32-16.56,8.94-27.87,16.29-34.3c-57-6.51-117-28.49-117-126.87c0-28,10-50.91,26.32-68.88c-2.64-6.49-11.4-32.62,2.48-67.97
+            c0,0,21.47-6.87,70.3,26.24c20.4-5.68,42.3-8.52,64.06-8.63c21.74,0.11,43.66,2.95,64.11,8.63c48.8-33.11,70.22-26.24,70.22-26.24
+            c13.92,35.35,5.17,61.48,2.53,67.97c16.36,17.97,26.25,40.88,26.25,68.88c0,98.67-60.09,120.23-117.26,126.56
+            c9.18,7.94,17.33,23.53,17.33,47.42c0,34.27-0.32,61.92-0.32,70.37c0,6.82,4.6,14.76,17.58,12.27
+            C438.55,497.51,512,401.49,512,288.23C512,146.58,397.42,32,256,32z"
+          />
+        </svg>
+        <span class="underline">GitHub</span>
+      </a>
+      <a href="https://npmjs.com/~moturiphil" target="_blank">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 576 512"
+          height="12"
+          style="position: relative; bottom: -2px"
+        >
+          <path
+            d="M288 288h-32v-64h32v64zm288-128v192H288v32H160v-32H0V160h576zm-416 32H32v128h64v-96h32v96h32V192zm160 0H192v160h64v-32h64V192zm224 0H352v128h64v-96h32v96h32v-96h32v96h32V192z"
+          /></svg
+        >&nbsp;<span class="underline">npm</span>
+      </a>
+      <a href="https://www.goodreads.com/user/show/142525237-philip-matunda" target="_blank">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 384 512"
+          height="12"
+          style="position: relative; bottom: -2px"
+        >
+          <path
+            d="M42.6 403.3h2.8c12.7 0 25.5 0 38.2.1 1.6 0 3.1-.4 3.6 2.1 7.1 34.9 30 54.6 62.9 63.9 26.9 7.6 54.1 7.8 81.3 1.8 33.8-7.4 56-28.3 68-60.4 8-21.5 10.7-43.8 11-66.5.1-5.8.3-47-.2-52.8l-.9-.3c-.8 1.5-1.7 2.9-2.5 4.4-22.1 43.1-61.3 67.4-105.4 69.1-103 4-169.4-57-172-176.2-.5-23.7 1.8-46.9 8.3-69.7C58.3 47.7 112.3.6 191.6 0c61.3-.4 101.5 38.7 116.2 70.3.5 1.1 1.3 2.3 2.4 1.9V10.6h44.3c0 280.3.1 332.2.1 332.2-.1 78.5-26.7 143.7-103 162.2-69.5 16.9-159 4.8-196-57.2-8-13.5-11.8-28.3-13-44.5zM188.9 36.5c-52.5-.5-108.5 40.7-115 133.8-4.1 59 14.8 122.2 71.5 148.6 27.6 12.9 74.3 15 108.3-8.7 47.6-33.2 62.7-97 54.8-154-9.7-71.1-47.8-120-119.6-119.7z"
+          /></svg
+        >&nbsp;<span class="underline">goodreads</span>
+      </a>
+      <a href="https://twitter.com/philipmatunda" target="_blank">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+          <path
+            d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
+          />
+        </svg>
+        <span class="underline">Twitter</span>
+      </a>
+      <a href="https://www.instagram.com/bunky_phil/" target="_blank">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+          <path
+            d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.6-9 132.1z"
+          />
+        </svg>
+        <span class="underline">Instagram</span>
+      </a>
+      <a href="https://www.linkedin.com/in/philip-matunda" target="_blank">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+          <path
+            d="M100.28 448H7.4V149.3h92.78zm-46.44-331.9C24.29 116.1 0 91.7 0 61.3 0 30 24.27 5.7 53.56 5.7 82.85 5.7 107.1 30 107.1 61.3c0 30.4-24.26 54.8-53.56 54.8zM447.9 448h-92.4V302.4c0-34.7-12.4-58.4-43.6-58.4-23.8 0-38 16-44.3 31.4-2.3 5.5-2.9 13.1-2.9 20.8V448h-92.4s1.2-251.1 0-277h92.4v39.3c-.2.3-.4.7-.5 1h.5v-.9c12.3-19 34.3-46.1 83.5-46.1 60.9 0 106.6 39.7 106.6 125.2V448z"
+          />
+        </svg>
+        <span class="underline">LinkedIn</span>
+      </a>
+    </section>
+
+    <!-- Footer credits -->
+
+    <footer
+      class="bg-near-white tc mt5 pa3 f6 light-slate-gray mw8 ml-auto mr-auto"
+    >
+      <span class="dib"
+        >Made with
+        <a class="light-slate-gray" href="https://tachyons.io">Tachyons</a
+        >.</span
+      >
+      <span class="dib"
+        >Hosted on
+        <a
+          class="light-slate-gray"
+          href="https://github.com/moturiphil"
+          >GitHub</a
+        >.</span
+      >
+      <span class="dib"
+        >Served with
+        <a class="light-slate-gray" href="https://www.cloudflare.com"
+          >Cloudflare</a
+        >.</span
+      >
+    </footer>
   </body>
 </html>
