host on netlify

--- a/contact.html
+++ b/contact.html
@@ -145,8 +145,10 @@
       >
       <span class="dib"
         >Hosted on
-        <a class="light-slate-gray" href="https://github.com/moturiphil"
-          >GitHub</a
+        <a
+          class="light-slate-gray"
+          href="https://www.netlify.com/"
+          >Netlify</a
         >.</span
       >
       <span class="dib"
