--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
         >Hosted on
         <a
           class="light-slate-gray"
-          href="https://github.com/moturiphil"
-          >GitHub</a
+          href="https://www.netlify.com/"
+          >Netlify</a
         >.</span
       >
       <span class="dib"
