founder at opencore

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         Entrepreneur & Software Engineer passionate about Digital Health.
         <br />
         Founder & Engineer at
-        <a href="https://opencore.co.ke" target="_blank">Opencore</a>.
+        <a href="https://opencore.co.ke" target="_blank">OpenCore</a>.
       </p>
     </section>
     <!-- Social Links -->
