add blog section

--- a/reads.html
+++ b/reads.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Contact - Philip Matunda</title>
+    <title>Philip Matunda</title>
 
     <!-- Meta -->
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Contact page for Philip Matunda." />
+    <meta
+      name="description"
+      content="Avid programmer passionate about code, design, startups and technology."
+    />
 
     <!-- Favicon -->
 
@@ -31,13 +34,18 @@
     />
     <link rel="manifest" href="./site.webmanifest" />
     <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#04143A" />
-    <meta name="msapplication-TileColor" content="#04143A" />
-    <meta name="theme-color" content="#ffffff" />
-
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@600&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha384-xh6JHOD11I9Ag7zjo8OsH52WzW/h8lfU1Jdz4MRwxJWbrW0NPZnCJKGHnpqH5v6o"
+      crossorigin="anonymous"
+    />
+    <meta name="msapplication-TileColor" content="#04143A" />
+    <meta name="theme-color" content="#ffffff" />
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -55,12 +63,9 @@
     <meta property="og:title" content="Philip Matunda" />
     <meta
       property="og:description"
-      content="Contact Philip Matunda for inquiries or collaborations."
+      content="I make apps, websites, backends, open-source projects, and startups (rarely). I like to deploy everything myself with Docker. I sometimes do design in Sketch. I don’t have a favourite programming language."
     />
-    <meta
-      property="og:url"
-      content="https://www.philipmatunda.com/contact.html"
-    />
+    <meta property="og:url" content="https://www.philipmatunda.com/" />
     <meta property="og:type" content="profile" />
     <meta property="profile:first_name" content="Philip" />
     <meta property="profile:last_name" content="Matunda" />
@@ -86,7 +91,7 @@
       </a>
       <ul class="pa0">
         <li class="dib ml2">
-          <a class="light-slate-gray" href="/projects.html" 
+          <a class="light-slate-gray" href="/projects.html" target=""
             >Projects</a
           >
         </li>
@@ -117,15 +122,34 @@
       </ul>
     </nav>
 
-    <section class="contact-section tc mt5 ph3 mw7 ml-auto mr-auto">
-      <h1 class="custom-heading">Contact Philip Matunda</h1>
-      <p class="light-slate-gray">
-        If you have any questions or would like to get in touch.
-      </p>
-      <p class="light-slate-gray">
-        Write me an
-        <a href="mailto:philipmatunda@gmail.com" class="email-link">email</a>.
-      </p>
+    <section class="article-section mw7 center avenir">
+      <!-- <h2 class="baskerville fw1 ph3 ph0-l">Reads</h2> -->
+      <article class="bt bb b--black-10">
+        <a
+          class="db pv4 ph3 ph0-l no-underline black dim"
+          href="/philosophy.html"
+        >
+          <div class="flex flex-column flex-row-ns">
+            <div class="w-100">
+              <h1 class="f3 fw1 baskerville mt0 lh-title flex items-center">
+                Embracing the Void
+                <i class="fa-solid fa-thumbtack"></i>
+              </h1>
+              <time class="f6 mb2 dib ttu tracked"
+                ><small>17 January, 2022</small></time
+              >
+              <p class="f6 f5-l lh-copy">
+                This philosophy encourages us to embrace uncertainty, cultivate
+                inner peace, and shape our destiny through self-defined values
+                and spiritual growth. Join me as I navigate the void, forging a
+                path that celebrates individuality and the endless possibilities
+                of creating meaning in our lives.
+              </p>
+            </div>
+          </div>
+        </a>
+      </article>
+      <!-- Repeat for other articles -->
     </section>
 
     <!-- Footer credits -->
