--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
 
     <!-- Social meta -->
 
@@ -73,7 +73,6 @@
       /* TACHYONS */
 
       /*! TACHYONS v4.11.1 | http://tachyons.io */ /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
-     
     </style>
   </head>
   <body>
@@ -87,16 +86,28 @@
       </a>
       <ul class="pa0">
         <li class="dib ml2">
-          <a class="light-slate-gray" href="/projects.html" target="">Projects</a>
+          <a class="light-slate-gray" href="/projects.html">Projects</a>
         </li>
         <li class="dib ml2">
-          <a class="light-slate-gray" href="https://medium.com/@matundaphyl" target="_blank">Blog</a>
+          <a class="light-slate-gray" href="/reads.html">Blog</a>
         </li>
         <li class="dib ml2">
-          <a class="light-slate-gray" target="_blank" href="https://www.goodreads.com/user/show/142525237-philip-matunda" target="_blank">Books</a>
+          <a
+            class="light-slate-gray"
+            target="_blank"
+            href="https://www.goodreads.com/user/show/142525237-philip-matunda"
+            target="_blank"
+            >Books</a
+          >
         </li>
         <li class="dib ml2">
-          <a class="light-slate-gray" target="_blank" href="https://docs.google.com/document/d/1cWOxh4vFS_Ok2dYimXS58aK5o-jYiPGOMYX-1jl65-w/edit?usp=sharing" target="">CV</a>
+          <a
+            class="light-slate-gray"
+            target="_blank"
+            href="https://docs.google.com/document/d/1cWOxh4vFS_Ok2dYimXS58aK5o-jYiPGOMYX-1jl65-w/edit?usp=sharing"
+            target=""
+            >CV</a
+          >
         </li>
         <li class="dib ml2">
           <a class="light-slate-gray" href="/contact.html" target="">Contact</a>
@@ -127,7 +138,7 @@
         Entrepreneur & Software Engineer passionate about Digital Health.
         <br />
         Founder & Engineer at
-        <a href="https://opencore.co.ke" target="_blank">OpenCore</a>.
+        <a href="https://pona.co.ke" target="_blank">Pona</a>.
       </p>
     </section>
     <!-- Social Links -->
@@ -164,7 +175,10 @@
           /></svg
         >&nbsp;<span class="underline">npm</span>
       </a>
-      <a href="https://www.goodreads.com/user/show/142525237-philip-matunda" target="_blank">
+      <a
+        href="https://www.goodreads.com/user/show/142525237-philip-matunda"
+        target="_blank"
+      >
         <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 384 512"
@@ -176,13 +190,23 @@
           /></svg
         >&nbsp;<span class="underline">goodreads</span>
       </a>
-      <a href="https://twitter.com/philipmatunda" target="_blank">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+      <a href="https://x.com/philipmatunda" target="_blank">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          version="1.1"
+          id="Layer_1"
+          width="24px"
+          height="24px"
+          viewBox="0 0 24 24"
+          style="enable-background: new 0 0 24 24"
+          xml:space="preserve"
+        >
           <path
-            d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
+            d="M14.095479,10.316482L22.286354,1h-1.940718l-7.115352,8.087682L7.551414,1H1l8.589488,12.231093L1,23h1.940717  l7.509372-8.542861L16.448587,23H23L14.095479,10.316482z M11.436522,13.338465l-0.871624-1.218704l-6.924311-9.68815h2.981339  l5.58978,7.82155l0.867949,1.218704l7.26506,10.166271h-2.981339L11.436522,13.338465z"
           />
         </svg>
-        <span class="underline">Twitter</span>
+        <span class="underline">X</span>
       </a>
       <a href="https://www.instagram.com/bunky_phil/" target="_blank">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
@@ -200,6 +224,19 @@
         </svg>
         <span class="underline">LinkedIn</span>
       </a>
+      <a href="https://www.linkedin.com/in/philip-matunda" target="_blank">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 448 512"
+          width="24"
+          height="24"
+        >
+          <path
+            d="M100.28 448H7.4V149.3h92.78zm-46.44-331.9C24.29 116.1 0 91.7 0 61.3 0 30 24.27 5.7 53.56 5.7 82.85 5.7 107.1 30 107.1 61.3c0 30.4-24.26 54.8-53.56 54.8zM447.9 448h-92.4V302.4c0-34.7-12.4-58.4-43.6-58.4-23.8 0-38 16-44.3 31.4-2.3 5.5-2.9 13.1-2.9 20.8V448h-92.4s1.2-251.1 0-277h92.4v39.3c-.2.3-.4.7-.5 1h.5v-.9c12.3-19 34.3-46.1 83.5-46.1 60.9 0 106.6 39.7 106.6 125.2V448z"
+          />
+        </svg>
+        <span class="underline">Medium</span>
+      </a>
     </section>
 
     <!-- Footer credits -->
@@ -214,10 +251,7 @@
       >
       <span class="dib"
         >Hosted on
-        <a
-          class="light-slate-gray"
-          href="https://www.netlify.com/"
-          >Netlify</a
+        <a class="light-slate-gray" href="https://www.netlify.com/">Netlify</a
         >.</span
       >
       <span class="dib"
