--- a/philosophy.html
+++ b/philosophy.html
@@ -51,7 +51,7 @@
     <meta name="twitter:creator" value="@philipmatunda" />
     <meta
       property="og:image"
-      content="https://www.philipmatunda.com/img/phil.png"
+      content="https://www.philipmatunda.com/img/og-image.jpg"
     />
     <meta property="og:image:width" content="1035" />
     <meta property="og:image:height" content="542" />
@@ -63,8 +63,8 @@
     <meta property="og:url" content="https://www.philipmatunda.com/" />
     <meta property="og:type" content="profile" />
     <meta property="profile:first_name" content="Philip" />
-    <meta property="profile:last_name" content="Moturi" />
-    <meta property="profile:username" content="pmatunda" />
+    <meta property="profile:last_name" content="Matunda" />
+    <meta property="profile:username" content="philipmatunda" />
     <meta property="profile:gender" content="male" />
 
     <!-- Custom stylesheet -->
@@ -86,9 +86,7 @@
       </a>
       <ul class="pa0">
         <li class="dib ml2">
-          <a class="light-slate-gray" href="/projects.html" target=""
-            >Projects</a
-          >
+          <a class="light-slate-gray" href="/projects.html">Projects</a>
         </li>
         <li class="dib ml2">
           <a class="light-slate-gray" href="/reads.html">Blog</a>
@@ -117,100 +115,73 @@
       </ul>
     </nav>
 
-    <!-- <section class="profile-section tc mt5 ph3 mw7 ml-auto mr-auto">
+    <article>
+      <header class="bg-gold sans-serif">
+        <div class="mw9 center pa4 pt5-ns ph7-l">
+          <time class="f6 mb2 dib ttu tracked"
+            ><small>17 January, 2022</small></time
+          >
+          <h3 class="f2 f1-m f-headline-l measure-narrow lh-title mv0">
+            <span class="bg-black-90 lh-copy white pa1 tracked-tight">
+              Embracing the Void
+            </span>
+          </h3>
+          <h4 class="f3 fw1 georgia i">
+            In a universe devoid of inherent meaning, "Embracing the Void"
+            explores the profound journey of finding purpose through
+            spirituality and personal values.
+            <br />
+            The Philosophical Landscape
+          </h4>
+          <h5 class="f6 ttu tracked black-80">By Philip Matunda</h5>
+        </div>
+      </header>
+      <div class="pa4 ph7-l georgia mw9-l center">
+        <!-- <p class="f5 f3-ns lh-copy measure georgia">
+          <b><u>1. Understanding the Void:</u></b>
+          The concept of the void represents the absence of inherent meaning in
+          the universe. For many, this realization is daunting, yet it is also
+          liberating. It allows us to shape our lives according to our own
+          beliefs and values rather than conforming to predefined narratives. By
+          acknowledging the void, we take the first step toward crafting a life
+          filled with purpose.
+        </p>
+        <p class="f5 f3-ns lh-copy measure georgia">
+          In 1958 he published a piece in Venture proclaiming what he called
+          "Sturgeon's Revelation"
+        </p>
+        <p class="f6 f5-ns lh-copy measure i pl4 bl bw1 b--gold mb4">
+          I repeat Sturgeon's Revelation, which was wrung out of me after twenty
+          years of wearying defense of science fiction against attacks of people
+          who used the worst examples of the field for ammunition, and whose
+          conclusion was that ninety percent of SF is crud. Using the same
+          standards that categorize 90% of science fiction as trash, crud, or
+          crap, it can be argued that 90% of film, literature, consumer goods,
+          etc. is crap. In other words, the claim (or fact) that 90% of science
+          fiction is crap is ultimately uninformative, because science fiction
+          conforms to the same trends of quality as all other artforms.
+        </p>
+        <p class="f5 f4-ns lh-copy measure mb4">
+          You don't have to bounce a tennis ball very far in San Francisco
+          before it will hit two developers complaining about how many js
+          tools/frameworks there are for development in 2015 and how much
+          unneccessary complexity they add. Doing a search on twitter for 'too
+          many js tools' or 'yet another js framework' returns... a lot of
+          people lamenting the current state of affairs.
+        </p>
 
-    </section> -->
-    <section class="projects-section tc mt5 ph3 mw7 ml-auto mr-auto">
-      <div class="project-card">
-        <div class="project-content">
-          <img
-            src="/img/digimal.png"
-            alt="Project 1 Image"
-            class="project-image"
-          />
-          <div class="project-text">
-            <h2>Digimal - MassNet Digitization Project</h2>
-            <p class="project-description">
-              Led the technical team for the MassNet Digitization Project,
-              achieving 90%+ coverage in 22 counties. Oversaw the development,
-              design, and DevOps processes.
-            </p>
-            <a
-              href="https://digimal.uonbi.ac.ke"
-              target="_blank"
-              class="view-details-button"
-              >View Details</a
-            >
-          </div>
-        </div>
+        <p class="f5 f4-ns lh-copy measure">
+          This is most likely, the wrong conversation for us as a community, to
+          be having. The presence of bad tools - shouldn't discourage us from
+          wanting more tools or frameworks. There are more books published in a
+          single day than I will ever be able to read in my lifetime. But this
+          does not make me sad. Or overwhelm me. Mostly I think about how
+          excited I am to read the best books that are being published. And this
+          is where we should push the conversation. How do we build better
+          tools? What does that look like?
+        </p> -->
       </div>
-      <div class="project-card">
-        <div class="project-content">
-          <img src="/img/dap.png" alt="Project 1 Image" class="project-image" />
-          <div class="project-text">
-            <h2>DAP - MOH Data Analytics Platform</h2>
-            <p class="project-description">
-              Supported the MOH Data Analytics Platform, played a role in the
-              technical support, customization of the MOH Data Analytics
-              Platform modules, server maintenance and DevOPs Operations.
-            </p>
-            <a
-              href="http://dsl.health.go.ke/"
-              target="_blank"
-              class="view-details-button"
-              >View Details</a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="project-card">
-        <div class="project-content">
-          <img
-            src="/img/ihris.png"
-            alt="Project 1 Image"
-            class="project-image"
-          />
-          <div class="project-text">
-            <h2>iHRIS - Integrated Human Resource Information System</h2>
-            <p class="project-description">
-              Supported iHRIS Kenya by training MOH ICT technical staff and
-              managing data administration, including system upgrades,
-              deployments, and maintenance.
-            </p>
-            <a
-              href="http://www.ihris.or.ke/moh/"
-              target="_blank"
-              class="view-details-button"
-              >View Details</a
-            >
-          </div>
-        </div>
-      </div>
-
-      <div class="project-card">
-        <div class="project-content">
-          <img
-            src="/img/ppms.png"
-            alt="Project 1 Image"
-            class="project-image"
-          />
-          <div class="project-text">
-            <h2>USAID PPMS - Partner Performance Monitoring System</h2>
-            <p class="project-description">
-              Contributed to the development of a HIV DQA Module within PPM
-              System
-            </p>
-            <a
-              href="https://partnermanagementsystem.uonbi.ac.ke/dhis-web-commons/security/login.action"
-              target="_blank"
-              class="view-details-button"
-              >View Details</a
-            >
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Social Links -->
+    </article>
 
     <!-- Footer credits -->
 
