--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <meta property="og:title" content="Philip Matunda" />
     <meta
       property="og:description"
-      content="I make apps, websites, backends, open-source projects, and startups (rarely). I like to deploy everything myself with Docker. I sometimes do design in Sketch. I don’t have a favourite programming language."
+      content="I make apps, websites, backends, frontends, open-source projects, and startups (into it). I like to deploy everything myself with Docker. I love solving technical problems."
     />
     <meta property="og:url" content="https://www.philipmatunda.com/" />
     <meta property="og:type" content="profile" />
@@ -120,27 +120,46 @@
     <br />
     <br />
     <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
 
     <section class="profile-section tc mt5 ph3 mw7 ml-auto mr-auto">
       <img src="/img/Phil.png" width="170" height="170" alt="Philip Matunda" />
-      <h1 class="custom-heading">Philip MATUNDA</h1>
+      <h1 class="custom-heading">Philip Matunda</h1>
       <ul class="custom-list">
-        <li>#engineer</li>
+        <li>#softwareEngineer</li>
         <li>#mentor</li>
-        <li>#entrepreneur</li>
+        <li>#digitalHealthInnovator</li>
       </ul>
       <p class="light-slate-gray">
-        Entrepreneur & Software Engineer passionate about Digital Health.
+        Passionate Software Engineer specializing in Digital Health Solutions.
         <br />
         Founder & Engineer at
         <a href="https://pona.co.ke" target="_blank">Pona</a>.
       </p>
+      <p>
+        I focus on developing impactful Health Information Systems (HIS) and
+        SaaS applications. Recently, I led the Digimal project, which
+        significantly enhanced malaria prevention efforts by facilitating the
+        distribution of mosquito nets across 22 counties. This involved seamless
+        integration with the Logistics Management Information Systems (LMISs) and
+        the Mpesa platform to optimize distribution and payment processes.
+        <br />
+        <br />
+        Projects I support include MoH Data Analytics platform to provide
+        actionable insights into healthcare performance, and contributing to the
+        customization of iHRIS, an intergrated human resource system based on
+        FHIR standards, which supports interoperability and efficient health
+        information exchange.
+        Explore my full portfolio of projects
+        <a href="/projects.html">here</a>.
+        <br />
+        <br />
+        I document my journey and share insights on software development,
+        digital health, and more on my <a href="/blog.html">blog</a>.
+        Additionally, I am an active contributor to open-source projects and
+        community initiatives in digital health.
+      </p>
     </section>
+
     <!-- Social Links -->
 
     <section class="social-links">
@@ -190,6 +209,19 @@
           /></svg
         >&nbsp;<span class="underline">goodreads</span>
       </a>
+      <a href="https://www.linkedin.com/in/philip-matunda" target="_blank">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 448 512"
+          width="24"
+          height="24"
+        >
+          <path
+            d="M100.28 448H7.4V149.3h92.78zm-46.44-331.9C24.29 116.1 0 91.7 0 61.3 0 30 24.27 5.7 53.56 5.7 82.85 5.7 107.1 30 107.1 61.3c0 30.4-24.26 54.8-53.56 54.8zM447.9 448h-92.4V302.4c0-34.7-12.4-58.4-43.6-58.4-23.8 0-38 16-44.3 31.4-2.3 5.5-2.9 13.1-2.9 20.8V448h-92.4s1.2-251.1 0-277h92.4v39.3c-.2.3-.4.7-.5 1h.5v-.9c12.3-19 34.3-46.1 83.5-46.1 60.9 0 106.6 39.7 106.6 125.2V448z"
+          />
+        </svg>
+        <span class="underline">Medium</span>
+      </a>
       <a href="https://x.com/philipmatunda" target="_blank">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -223,19 +255,6 @@
           />
         </svg>
         <span class="underline">LinkedIn</span>
-      </a>
-      <a href="https://www.linkedin.com/in/philip-matunda" target="_blank">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 448 512"
-          width="24"
-          height="24"
-        >
-          <path
-            d="M100.28 448H7.4V149.3h92.78zm-46.44-331.9C24.29 116.1 0 91.7 0 61.3 0 30 24.27 5.7 53.56 5.7 82.85 5.7 107.1 30 107.1 61.3c0 30.4-24.26 54.8-53.56 54.8zM447.9 448h-92.4V302.4c0-34.7-12.4-58.4-43.6-58.4-23.8 0-38 16-44.3 31.4-2.3 5.5-2.9 13.1-2.9 20.8V448h-92.4s1.2-251.1 0-277h92.4v39.3c-.2.3-.4.7-.5 1h.5v-.9c12.3-19 34.3-46.1 83.5-46.1 60.9 0 106.6 39.7 106.6 125.2V448z"
-          />
-        </svg>
-        <span class="underline">Medium</span>
       </a>
     </section>
 
