--- a/projects.html
+++ b/projects.html
@@ -131,9 +131,11 @@
           <div class="project-text">
             <h2>Digimal - MassNet Digitization Project</h2>
             <p class="project-description">
-              Led the technical team for the MassNet Digitization Project,
-              achieving 90%+ coverage in 22 counties. Oversaw the development,
-              design, and DevOps processes.
+              I led the Digimal project, which
+              significantly enhanced malaria prevention efforts by facilitating
+              the distribution of mosquito nets across 22 counties. This
+              involved seamless integration with Systems (LMIS) and the Mpesa platform to optimize
+              distribution and payment processes.
             </p>
             <a
               href="https://digimal.uonbi.ac.ke"
