update on prfile

--- a/index.html
+++ b/index.html
@@ -137,19 +137,19 @@
       </p>
       <p>
         I focus on developing impactful Health Information Systems (HIS) and
-        SaaS applications. Recently, I led the Digimal project, which
-        significantly enhanced malaria prevention efforts by facilitating the
-        distribution of mosquito nets across 22 counties. This involved seamless
-        integration with the Logistics Management Information Systems (LMISs) and
-        the Mpesa platform to optimize distribution and payment processes.
+        SaaS applications. Recently, I led development effort of the Digimal
+        project, which significantly enhanced malaria prevention efforts in
+        Kenya by facilitating the distribution of over 15 million mosquito nets
+        across 22 counties. This involved seamless integration with the
+        Logistics Management Information Systems (LMISs) and the Mpesa platform
+        to optimize distribution and payment processes.
         <br />
         <br />
         Projects I support include MoH Data Analytics platform to provide
         actionable insights into healthcare performance, and contributing to the
         customization of iHRIS, an intergrated human resource system based on
         FHIR standards, which supports interoperability and efficient health
-        information exchange.
-        Explore my full portfolio of projects
+        information exchange. Explore my full portfolio of projects
         <a href="/projects.html">here</a>.
         <br />
         <br />
