site google analytics

--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
     <meta property="profile:username" content="philipmatunda" />
     <meta property="profile:gender" content="male" />
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-60HLZ21MCH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-60HLZ21MCH');
+    </script>
+
     <!-- Custom stylesheet -->
 
     <style>
